# Embedded-Device-Controller

./: CMakeLists.txt  README.en.md  README.md
src/: main.cpp
src/dal/: gpio.cpp  gpio.h  uart.cpp  uart.h
src/fsm/: fsm.cpp  fsm.h
src/utils/: logger.cpp  logger.h
